Fix broken styles

--- a/sites/all/themes/picsforpets/css/style.css
+++ b/sites/all/themes/picsforpets/css/style.css
@@ -572,14 +572,14 @@ h1 .amp, #picsforpets-share .fb-share-me .amp, h2 .amp, h3 .amp, h4 .amp, h5 .am
 /* import font files using @font-face, if not using a service such as typekit */
 @font-face {
   font-family: "League_Gothic";
-  src: url('/League_Gothic-webfont.eot');
-  src: url('/League_Gothic-webfont.eot?#iefix') format('eot'), url('../fonts/League_Gothic-webfont.woff') format('woff'), url('../fonts/League_Gothic-webfont.ttf') format('truetype'), url('../fonts/League_Gothic-webfont.svg') format('svg');
+  src: url('../fonts/League_Gothic-webfont.eot');
+  src: url('../fonts/League_Gothic-webfont.eot?#iefix') format('eot'), url('../fonts/League_Gothic-webfont.woff') format('woff'), url('../fonts/League_Gothic-webfont.ttf') format('truetype'), url('../fonts/League_Gothic-webfont.svg') format('svg');
 }
 
 @font-face {
   font-family: "DINWeb-CondBold";
-  src: url('/DINWeb-CondBold.eot');
-  src: url('/DINWeb-CondBold.eot?#iefix') format('eot'), url('../fonts/DINWeb-CondBold.woff') format('woff'), url('../fonts/DINComp-CondBold.ttf') format('truetype');
+  src: url('../fonts/DINWeb-CondBold.eot');
+  src: url('../fonts/DINWeb-CondBold.eot?#iefix') format('eot'), url('../fonts/DINWeb-CondBold.woff') format('woff'), url('../fonts/DINComp-CondBold.ttf') format('truetype');
 }
 
 @font-face {
@@ -1054,7 +1054,7 @@ textarea, input[type=text], input[type=password], input[type=email], input[type=
 }
 
 select {
-  background: url('select-down-arrow.png') right center no-repeat, white;
+  background: url('../images/select-down-arrow.png') right center no-repeat, white;
 }
 
 input[type=search] {
@@ -1625,7 +1625,7 @@ ul.inline, ul.inline li {
   text-indent: 110%;
   white-space: nowrap;
   overflow: hidden;
-  background-image: url('10k-scholarship.png');
+  background-image: url('../images/10k-scholarship.png');
   background-repeat: no-repeat;
   background-position: 50% 50%;
   width: 95px;
@@ -1647,7 +1647,7 @@ ul.inline, ul.inline li {
   text-indent: 110%;
   white-space: nowrap;
   overflow: hidden;
-  background-image: url('ds-logo.png');
+  background-image: url('../images/ds-logo.png');
   background-repeat: no-repeat;
   background-position: 50% 50%;
   width: 145px;
@@ -2038,7 +2038,7 @@ a.footer-furtography {
   text-indent: 110%;
   white-space: nowrap;
   overflow: hidden;
-  background-image: url('../images/close.png');
+  background-image: url('../images/../images/close.png');
   background-repeat: no-repeat;
   background-position: 50% 50%;
   width: 26px;
@@ -2107,7 +2107,7 @@ a.footer-furtography {
   z-index: 750;
 }
 #picsforpets-share .picsforpets-share-count-arrow {
-  background: url('fb-share-count.png') no-repeat right;
+  background: url('../images/fb-share-count.png') no-repeat right;
   display: inline-block;
   height: 12px;
   margin-left: 18px;
@@ -2340,7 +2340,7 @@ div[aria-labelledby="ui-dialog-title-dosomething-picsforpets-shelters-options-fo
   margin-bottom: 20px;
 }
 .prizes-scholarships .pane-content .share-wrapper.toys .shares {
-  background: url('200-shares-bar.png');
+  background: url('../images/200-shares-bar.png');
 }
 .prizes-scholarships .pane-content .share-wrapper.toys .inner {
   margin-left: 90px;
@@ -2349,13 +2349,13 @@ div[aria-labelledby="ui-dialog-title-dosomething-picsforpets-shelters-options-fo
   margin-bottom: 20px;
 }
 .prizes-scholarships .pane-content .share-wrapper.food .shares {
-  background: url('500-shares-bar.png');
+  background: url('../images/500-shares-bar.png');
 }
 .prizes-scholarships .pane-content .share-wrapper.food .inner {
   margin-left: 145px;
 }
 .prizes-scholarships .pane-content .share-wrapper.bedding .shares {
-  background: url('1000-shares-bar.png');
+  background: url('../images/1000-shares-bar.png');
 }
 .prizes-scholarships .pane-content .share-wrapper.bedding .shares .inner {
   margin-left: 140px;
@@ -2365,7 +2365,7 @@ div[aria-labelledby="ui-dialog-title-dosomething-picsforpets-shelters-options-fo
   text-transform: uppercase;
 }
 .prizes-scholarships .pane-content .scholarship:before {
-  content: url('star.png');
+  content: url('../images/star.png');
   display: inline;
   float: left;
   height: 100px;
@@ -2893,7 +2893,7 @@ select#edit-field-fb-app-animal-type-value, select#edit-sort-by, #picsforpets-ga
   -ms-border-radius: 0px;
   -o-border-radius: 0px;
   border-radius: 0px;
-  background: url('down-arrow.png') 60px 8px no-repeat, white;
+  background: url('../images/down-arrow.png') 60px 8px no-repeat, white;
   border: 0;
   color: #ec1c24;
   font-size: 14px;
